# codewars-solutions

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/6-kyu/does_my_number_look_big_in_this/python/: main.py
src/6-kyu/does_my_number_look_big_in_this/rust/: main.rs
src/6-kyu/does_my_number_look_big_in_this/typescript/: main.ts
src/7-kyu/highest_and_lowest/typescript/: main.ts
src/8-kyu/dollars_and_cents/rust/: main.rs
